fixed exit button on mobile and updated IP popup look

--- a/strabo/strabo/static/public_styles/map.css
+++ b/strabo/strabo/static/public_styles/map.css
@@ -20,28 +20,31 @@ html, body {
   height: 50px;
 }
 
-.container-popup {
+.popup-background {
     position: relative;
     position: fixed;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
-    background: rgba(0,0,0,.5);
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.4);
     z-index: 20000;
 }
 .popup {
-    width: 100%;
+    width: 80%;
     height: 100%;
-    background: rgba(0,0,0,0);
-    position: absolute;
+    background: #ebf5e4;
+    position: absolute; 
+    right: 10%;
+    left: 10%;
     top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     margin: auto;
-    z-index: 100000; //goes above leaflet link
+    padding: 1.25em;
+    border: 1px solid #000000;
+    z-index: 100000; /* goes above leaflet link */ 
 }
+
+
 /*
 #book_num, #section_num, #text, #title, #attribution, .glyphicon-remove {
   color:#4A4A4A;
